2006-12-25  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.h:
	Removed comment about GtkSourceContextMatchOptions enum,
	it's not true.

2006-12-25  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcecontextengine.h,
	gtksourceview/gtksourcelanguage-parser-2.c:
	Added new context option "once-only", made
	GtkSourceContextEnginePrivate use single
	GtkSourceContextMatchOptions field instead of bunch of
	bitfields.
	* gtksourceview/gtksourcelanguagesmanager.c:
	Removed odd #include <libxml/xmlreader.h>.
	* gtksourceview/gtksourcestylescheme.c: (parse_style)
	Initialize attribute values, to make gcc happy.

2006-12-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/check.sh,
	gtksourceview/language-specs/Makefile.am,
	gtksourceview/language-specs/dtd.lang,
	gtksourceview/language-specs/gtk-doc.lang:
	New lang files.
	* gtksourceview/language-specs/c.lang,
	gtksourceview/language-specs/def.lang,
	gtksourceview/language-specs/desktop.lang,
	gtksourceview/language-specs/m4.lang,
	gtksourceview/language-specs/sh.lang,
	gtksourceview/language-specs/xml.lang:
	Improved (hopefully) higlighting.

2006-12-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c:
	Fixed mapping styles: it skipped intermediate styles, i.e.
	<style id="foo" map-to="moo"/>
	<style id="moo" map-to="baz"/>
	was treated as
	<style id="foo" map-to="baz"/>
	<style id="moo" map-to="baz"/>.
	* gtksourceview/gtksourcecontextengine.c:
	Some doc clean up.

2006-12-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcecontextengine.h,
	gtksourceview/gtksourcelanguage.c,
	gtksourceview/gtksourcelanguage-private.h,
	gtksourceview/gtksourcelanguage-parser-1.c,
	gtksourceview/gtksourcelanguage-parser-2.c:
	Made context definitions shared between engines using same language: