@@ -92,6 +92,12 @@
 	((ctx)->parent == NULL || (ctx)->parent->parent == NULL || \
 		HAS_OPTION ((ctx)->definition, EXTEND_PARENT))
 
+/* Root and its children have this FALSE; grandchildren use the flag */
+#define CONTEXT_ENDS_PARENT(ctx) \
+	((ctx)->parent != NULL && (ctx)->parent->parent != NULL && \
+		HAS_OPTION ((ctx)->definition, END_PARENT))
+#define SEGMENT_ENDS_PARENT(s) CONTEXT_ENDS_PARENT ((s)->context)
+
 /* Does the segment terminate at line end? */
 /* Root segment doesn't, children look at the flag */
 #define CONTEXT_END_AT_LINE_END(ctx) \
@@ -529,6 +535,8 @@ set_tag_style (GtkSourceContextEngine *ce,
 
 		while (style == NULL)
 		{
+			/* XXX Style references really must be fixed, both parser for
+			 * sane use in lang files, and engine for safe use. */
 			/* FIXME This may be an infinite loop *if* we allow circular
 			 * references between lang files. */
 			map_to = g_hash_table_lookup (ENGINE_STYLES_MAP(ce), map_to);
@@ -840,7 +848,7 @@ ensure_highlighted (GtkSourceContextEngine *ce,
  * refresh_region.
  *
  * Marks the area as updated - notifies view about it, and adds it to
- * refresh_region if @modify_refresh_region is TRUE (update_syntax may
+ * refresh_region if @modify_refresh_region is %TRUE (update_syntax may
  * process huge area though actually updated is couple of lines, so in
  * that case update_syntax() takes care of refresh_region, and this
  * function only notifies the view).
@@ -1722,7 +1730,7 @@ gtk_source_context_engine_text_deleted (GtkSourceEngine *engine,
  *
  * @ce: a #GtkSourceContextEngine.
  *
- * Returns first invalid segment, or NULL.
+ * Returns first invalid segment, or %NULL.
  */
 static Segment *
 get_invalid_segment (GtkSourceContextEngine *ce)
@@ -1846,7 +1854,7 @@ update_tree (GtkSourceContextEngine *ce)
  * GtkSourceEngine::update_highlight method.
  *
  * Makes sure the area is analyzed and highlighted. If @asynchronous
- * is FALSE, then it queues idle worker.
+ * is %FALSE, then it queues idle worker.
  */
 static void
 gtk_source_context_engine_update_highlight (GtkSourceEngine   *engine,
@@ -2095,7 +2103,7 @@ destroy_tags_hash (GtkSourceContextEngine *ce)
  * @buffer: buffer.
  *
  * Detaches engine from previous buffer, and attaches to @buffer if
- * it's not NULL.
+ * it's not %NULL.
  */
 static void
 gtk_source_context_engine_attach_buffer (GtkSourceEngine *engine,
@@ -2302,6 +2310,7 @@ _gtk_source_context_engine_new (GtkSourceContextData *ctx_data)
 	GtkSourceContextEngine *ce;
 
 	g_return_val_if_fail (ctx_data != NULL, NULL);
+	g_return_val_if_fail (ctx_data->lang != NULL, NULL);
 
 	ce = g_object_new (GTK_TYPE_SOURCE_CONTEXT_ENGINE, NULL);
 	ce->priv->ctx_data = _gtk_source_context_data_ref (ctx_data);
@@ -2351,7 +2360,7 @@ _gtk_source_context_data_ref (GtkSourceContextData *ctx_data)
  *
  * @ctx_data: #GtkSourceContextData.
  *
- * Decreases reference count in ctx_data. Then reference count
+ * Decreases reference count in ctx_data. When reference count
  * drops to zero, ctx_data is freed, and ctx_data->lang->priv->ctx_data
  * is unset.
  */
@@ -2438,7 +2447,7 @@ find_single_byte_escape (const gchar *string)
  *
  * @pattern: the regular expression.
  * @flags: compile options for @pattern.
- * @error: location to store the error occuring, or NULL to ignore errors.
+ * @error: location to store the error occuring, or %NULL to ignore errors.
  *
  * Creates a new regex.
  *
@@ -2457,7 +2466,7 @@ regex_new (const gchar           *pattern,
 	{
 		g_set_error (error, GTK_SOURCE_CONTEXT_ENGINE_ERROR,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR_INVALID_REGEX,
-			     "using \\C is not supported");
+			     _("using \\C is not supported in language definitions"));
 		return NULL;
 	}
 
@@ -2770,23 +2779,16 @@ apply_sub_patterns (Segment         *state,
 }
 
 /**
- * apply_match:
+ * can_apply_match:
  *
  * @state: the current state of the parser.
- * @line_starts_at: beginning offset of the line.
  * @line: the line to analyze.
- * @line_pos: the position inside @line.
- * @line_length: the length of @line.
- * @regex: regex that matched.
+ * @match_start: start position of match.
+ * @match_end: where to put end of match.
  * @where: kind of sub patterns to apply.
  *
- * Moves @line_pos after the matched text. @line_pos is not
- * updated and the function returns %FALSE if the match cannot be
- * applied beacuse an ancestor ends in the middle of the matched
- * text.
- *
- * If the match can be applied the function applies the appropriate
- * sub patterns.
+ * See apply_match(), this function is a helper function
+ * called from where, it doesn't modify syntax tree.
  *
  * Return value: %TRUE if the match can be applied.
  */
@@ -2850,6 +2852,24 @@ can_apply_match (Context  *state,
 	return TRUE;
 }
 
+/**
+ * apply_match:
+ *
+ * @state: the current state of the parser.
+ * @line: the line to analyze.
+ * @regex: regex that matched.
+ * @where: kind of sub patterns to apply.
+ *
+ * Moves @line_pos after the matched text. @line_pos is not
+ * updated and the function returns %FALSE if the match cannot be
+ * applied because an ancestor ends in the middle of the matched
+ * text.
+ *
+ * If the match can be applied the function applies the appropriate
+ * sub patterns.
+ *
+ * Return value: %TRUE if the match can be applied.
+ */
 static gboolean
 apply_match (Segment         *state,
 	     LineInfo        *line,
@@ -2871,6 +2891,26 @@ apply_match (Segment         *state,
 	return TRUE;
 }
 
+/**
+ * create_reg_all:
+ *
+ * @context: context.
+ * @definition: context definition.
+ *
+ * Creates regular expression for all possible transitions: it
+ * combines terminating regex, terminating regexes of parent
+ * contexts if those can terminate this one, and start regexes
+ * of child contexts.
+ *
+ * It takes as an argument actual context or a context definition. In
+ * case when context end depends on start (\%{foo@start} references),
+ * it must use the context, definition is not enough. If there are no
+ * those references, then the reg_all is created right in the definition
+ * when no contexts exist yet. This is why this function has its funny
+ * arguments.
+ *
+ * Returns: resulting regex or %NULL when pcre failed to compile the regex.
+ */
 static Regex *
 create_reg_all (Context           *context,
 		ContextDefinition *definition)
@@ -2919,6 +2959,9 @@ create_reg_all (Context           *context,
 			if (!CONTEXT_EXTENDS_PARENT (tmp))
 			{
 				gboolean append = TRUE;
+
+				/* Code as it is seems to be right, and seems working right.
+				 * Remove FIXME's below if everything is fine. */
 
 				if (tmp->parent->end != NULL)
 					g_string_append (all, regex_get_pattern (tmp->parent->end));
@@ -2981,14 +3024,12 @@ create_reg_all (Context           *context,
 	if (regex == NULL)
 	{
 		/* regex_new could fail, for instance if there are different
-		 * named sub-patterns with the same name. */
-		/* FIXME: this error also happens when some patterns are screwed up,
-		 * and printing error here actually helps. But the "for all the transitions"
-		 * part is questionable (and one would want to fix it in any case, even
-		 * if all patterns are correct). */
-		g_warning ("Cannot create a regex for all the transitions, "
-			   "the syntax highlighting process will be slower "
-			   "than usual.\nThe error was: %s", error->message);
+		 * named sub-patterns with the same name or if resulting regex is
+		 * too long. In this case fixing lang file helps (e.g. renaming
+		 * subpatterns, making huge keywords use bigger prefixes, etc.) */
+		g_warning (_("Cannot create a regex for all the transitions, "
+			     "the syntax highlighting process will be slower "
+			     "than usual.\nThe error was: %s"), error->message);
 		g_error_free (error);
 	}
 
@@ -3207,6 +3248,9 @@ context_freeze_hash_cb (G_GNUC_UNUSED gpointer text,
  * and decrement it when we are done with analysis, so no more needed
  * contexts go away. Keeping a list of referenced contexts is painful
  * or slow, so we just reference all contexts present at the moment.
+ *
+ * Note this is not reentrant, context_freeze()/context_thaw() pair is called
+ * only from update_syntax().
  */
 static void
 context_freeze (Context *ctx)
@@ -3246,7 +3290,7 @@ get_child_contexts_hash_cb (G_GNUC_UNUSED gpointer text,
  * @context: the context.
  *
  * Recursively decrements reference count in context and its children,
- * if it was incremented by context_freeze.
+ * if it was incremented by context_freeze().
  */
 static void
 context_thaw (Context *ctx)
@@ -3349,8 +3393,8 @@ create_child_context (Context           *parent,
  * segment_new:
  *
  * @ce: the engine.
- * @parent: parent segment (NULL for the root segment).
- * @context: context for this segment (NULL for invalid segments).
+ * @parent: parent segment (%NULL for the root segment).
+ * @context: context for this segment (%NULL for invalid segments).
  * @start_at: start offset.
  * @end_at: end offset.
  * @is_start: is_start flag.
@@ -3457,7 +3501,7 @@ find_segment_position_backward_ (Segment  *segment,
 /**
  * find_segment_position:
  *
- * @parent: parent segment (not NULL).
+ * @parent: parent segment (not %NULL).
  * @hint: segment somewhere near new segment position.
  * @start_at: start offset.
  * @end_at: end offset.
@@ -3511,8 +3555,8 @@ find_segment_position (Segment  *parent,
  * create_segment:
  *
  * @ce: the engine.
- * @parent: parent segment (NULL for the root segment).
- * @context: context for this segment (NULL for invalid segments).
+ * @parent: parent segment (%NULL for the root segment).
+ * @context: context for this segment (%NULL for invalid segments).
  * @start_at: start offset.
  * @end_at: end offset.
  * @is_start: is_start flag.
@@ -3741,7 +3785,6 @@ simple_context_starts_here (GtkSourceContextEngine *ce,
 {
 	gint match_end;
 	Context *new_context;
-	Segment *new_segment;
 	ContextDefinition *definition = child_def->u.definition;
 
 	g_return_val_if_fail (definition->u.match != NULL, FALSE);
@@ -3754,27 +3797,54 @@ simple_context_starts_here (GtkSourceContextEngine *ce,
 	new_context = create_child_context (state->context, child_def, line->text);
 	g_return_val_if_fail (new_context != NULL, FALSE);
 
-	if (!can_apply_match (new_context, line, *line_pos, &match_end, definition->u.match) ||
-	    /* if length of the match is zero, then we get zero-length segment and return to
-	     * the same state, so it's an infinite loop */
-	    *line_pos == match_end)
+	if (!can_apply_match (new_context, line, *line_pos, &match_end, definition->u.match))
+	{
+		context_unref (new_context);
+		return FALSE;
+	}
+
+	/* If length of the match is zero, then we get zero-length segment and return to
+	 * the same state, so it's an infinite loop. But, if this child ends parent, we
+	 * do want to terminate parent. Still, if match is at the beginning of the parent
+	 * then we get an infinite loop again, so we check that (FIXME it really should destroy
+	 * parent context then, but then we again can get parent context be recreated here and
+	 * so on) */
+	if (*line_pos == match_end &&
+	    (!CONTEXT_ENDS_PARENT (new_context) || *line_pos == state->start_at))
 	{
 		context_unref (new_context);
 		return FALSE;
 	}
 
 	g_assert (match_end <= line->length);
-
 	segment_extend (state, line->start_at + match_end);
-        new_segment = create_segment (ce, state, new_context,
-				      line->start_at + *line_pos,
-				      line->start_at + match_end,
-				      TRUE,
-				      ce->priv->hint2);
-	apply_sub_patterns (new_segment, line, definition->u.match, SUB_PATTERN_WHERE_DEFAULT);
+
+	if (*line_pos != match_end)
+	{
+		/* Normal non-zero-length match, create a child segment */
+		Segment *new_segment;
+		new_segment = create_segment (ce, state, new_context,
+					      line->start_at + *line_pos,
+					      line->start_at + match_end,
+					      TRUE,
+					      ce->priv->hint2);
+		apply_sub_patterns (new_segment, line, definition->u.match, SUB_PATTERN_WHERE_DEFAULT);
+		ce->priv->hint2 = new_segment;
+	}
+
+	/* Terminate parent if needed */
+	if (CONTEXT_ENDS_PARENT (new_context))
+	{
+		do
+		{
+			ce->priv->hint2 = state;
+			state = state->parent;
+		}
+		while (SEGMENT_ENDS_PARENT (state));
+	}
+
 	*line_pos = match_end;
 	*new_state = state;
-	ce->priv->hint2 = new_segment;
 	context_unref (new_context);
 	return TRUE;
 }
@@ -3862,7 +3932,7 @@ segment_ends_here (Segment  *state,
  * This function only checks conetxts and does not modify the tree,
  * it's used by ancestor_ends_here().
  *
- * Return value: the ancestor context that terminates here or NULL.
+ * Return value: the ancestor context that terminates here or %NULL.
  */
 static Context *
 ancestor_context_ends_here (Context                *state,
@@ -3922,7 +3992,7 @@ ancestor_context_ends_here (Context                *state,
  * @new_state: where to store the new state.
  *
  * Verifies if some ancestor context ends at given position. If
- * state changed and @new_state is not NULL, then the new state is stored
+ * state changed and @new_state is not %NULL, then the new state is stored
  * in @new_state, and descendants of @new_state are closed, so the
  * terminating segment becomes current state.
  *
@@ -4077,7 +4147,10 @@ next_segment (GtkSourceContextEngine  *ce,
 			if (apply_match (state, line, &pos, state->context->end, SUB_PATTERN_WHERE_END))
 			{
 				g_assert (pos <= line->length);
-				/* FIXME: if child may terminate parent */
+
+				while (SEGMENT_ENDS_PARENT (state))
+					state = state->parent;
+
 				*new_state = state->parent;
 				ce->priv->hint2 = state;
 				*line_pos = pos;
@@ -4572,7 +4645,7 @@ get_segment_ (Segment *segment,
  * get_segment_at_offset:
  *
  * @ce: #GtkSoucreContextEngine.
- * @hint: segment to start search from or NULL.
+ * @hint: segment to start search from or %NULL.
  * @offset: the offset.
  *
  * Finds the deepest segment "at @offset".
@@ -5061,11 +5134,11 @@ erase_segments (GtkSourceContextEngine *ce,
  * update_syntax:
  *
  * @ce: #GtkSourceContextEngine.
- * @end: desired end of region to analyze or NULL.
+ * @end: desired end of region to analyze or %NULL.
  * @time: maximal amount of time in milliseconds allowed to spend here
  * or 0 for 'unlimited'.
  *
- * Updates syntax tree. If @end is not NULL, then it analyzes
+ * Updates syntax tree. If @end is not %NULL, then it analyzes
  * (reanalyzes invalid areas in) region from start of buffer
  * to @end. Otherwise, it analyzes batch of text starting at
  * first invalid line.
@@ -5073,7 +5146,7 @@ erase_segments (GtkSourceContextEngine *ce,
  * when time elapsed is greater than @time, so analyzed region is
  * not necessarily what's requested (unless @time is 0).
  */
-/* XXX it needs to be refactored. */
+/* XXX it must be refactored. */
 static void
 update_syntax (GtkSourceContextEngine *ce,
 	       const GtkTextIter      *end,
@@ -5201,6 +5274,8 @@ update_syntax (GtkSourceContextEngine *ce,
 #endif
 
 		/* XXX this is wrong */
+		/* I don't know anymore why it's wrong, I guess it means
+		 * "may be inefficient" */
 		if (ce->priv->hint2 != NULL)
 			ce->priv->hint = ce->priv->hint2;
 		else
@@ -5426,7 +5501,7 @@ context_definition_new (const gchar        *id,
 		g_set_error (error,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR_INVALID_START_REF,
-			     "context '%s' cannot contain a \\%%{...@start} command",
+			     _("context '%s' cannot contain a \\%%{...@start} command"),
 			     id);
 		regex_error = TRUE;
 	}
@@ -5569,7 +5644,7 @@ _gtk_source_context_data_define_context (GtkSourceContextData *ctx_data,
 		g_set_error (error,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR_DUPLICATED_ID,
-			     "duplicated context id '%s'", id);
+			     _("duplicated context id '%s'"), id);
 		return FALSE;
 	}
 
@@ -5596,7 +5671,8 @@ _gtk_source_context_data_define_context (GtkSourceContextData *ctx_data,
 		g_set_error (error,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR_INVALID_ARGS,
-			     "insufficient or redunduant arguments creating "
+			     /* do not translate, parser should take care of this */
+			     "insufficient or redundant arguments creating "
 			     "the context '%s'", id);
 		return FALSE;
 	}
@@ -5652,7 +5728,7 @@ _gtk_source_context_data_add_sub_pattern (GtkSourceContextData *ctx_data,
 		g_set_error (error,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR_DUPLICATED_ID,
-			     "duplicated context id '%s'", id);
+			     _("duplicated context id '%s'"), id);
 		return FALSE;
 	}
 
@@ -5679,6 +5755,7 @@ _gtk_source_context_data_add_sub_pattern (GtkSourceContextData *ctx_data,
 		g_set_error (error,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR_INVALID_WHERE,
+			     /* do not translate, parent takes care of this */
 			     "invalid location ('%s') for sub pattern '%s'",
 			     where, id);
 		return FALSE;
@@ -5751,7 +5828,8 @@ _gtk_source_context_data_add_ref (GtkSourceContextData *ctx_data,
 		g_set_error (error,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR,
 			     GTK_SOURCE_CONTEXT_ENGINE_ERROR_INVALID_PARENT,
-			     _("invalid parent type for the context '%s'"),
+			     /* do not translate, parent takes care of this */
+			     "invalid parent type for the context '%s'",
 			     ref_id);
 		return FALSE;
 	}
@@ -5823,8 +5901,8 @@ resolve_reference (G_GNUC_UNUSED const gchar *id,
 				{
 					g_set_error (&data->error, GTK_SOURCE_CONTEXT_ENGINE_ERROR,
 						     GTK_SOURCE_CONTEXT_ENGINE_ERROR_INVALID_STYLE,
-						     "style override used with wildcard context reference"
-						     " in language '%s' in ref '%s'",
+						     _("style override used with wildcard context reference"
+						       " in language '%s' in ref '%s'"),
 						     data->ctx_data->lang->priv->id, ref->id);
 				}
 				else
@@ -5837,7 +5915,7 @@ resolve_reference (G_GNUC_UNUSED const gchar *id,
 		{
 			g_set_error (&data->error, GTK_SOURCE_CONTEXT_ENGINE_ERROR,
 				     GTK_SOURCE_CONTEXT_ENGINE_ERROR_INVALID_REF,
-				     "invalid reference '%s'", child_def->u.id);
+				     _("invalid reference '%s'"), child_def->u.id);
 		}
 	}
 }
@@ -5857,7 +5935,7 @@ resolve_reference (G_GNUC_UNUSED const gchar *id,
  * May be called any number of times, must be called after parsing is
  * done.
  *
- * Return value: TRUE on success, FALSE if there were unresolved
+ * Return value: %TRUE on success, %FALSE if there were unresolved
  * references.
  */
 gboolean
